--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         body {
             font-family: 'Georgia', serif;
             line-height: 1.6;
-            color: #2c3e50;
-            background-color: #fefefe;
+            color: #2a2a2a;
+            background: linear-gradient(135deg, #f5f5f5 0%, #e8e8e8 100%);
         }
 
         .container {
@@ -25,14 +25,15 @@
         }
 
         header {
-            background: linear-gradient(135deg, #2c5530 0%, #4a7c59 100%);
+            background: linear-gradient(135deg, #1a1a1a 0%, #2d2d2d 100%);
             color: white;
             padding: 1rem 0;
             position: fixed;
             width: 100%;
             top: 0;
             z-index: 1000;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+            border-bottom: 3px solid #8b6f47;
         }
 
         nav {
@@ -44,7 +45,9 @@
         .logo {
             font-size: 2rem;
             font-weight: bold;
-            color: #f4f4f4;
+            color: #f5f5f5;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+            letter-spacing: 2px;
         }
 
         .nav-links {
@@ -54,19 +57,23 @@
         }
 
         .nav-links a {
-            color: white;
+            color: #f5f5f5;
             text-decoration: none;
             font-weight: 500;
-            transition: color 0.3s ease;
+            transition: all 0.3s ease;
+            padding: 8px 16px;
+            border-radius: 4px;
         }
 
         .nav-links a:hover {
-            color: #90ee90;
+            color: #8b6f47;
+            background: rgba(139, 111, 71, 0.1);
+            transform: translateY(-1px);
         }
 
         .hero {
-            background: linear-gradient(rgba(44, 85, 48, 0.7), rgba(44, 85, 48, 0.7)), 
-                        url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 600"><rect fill="%2387ceeb" width="1200" height="600"/><path fill="%23228b22" d="M0 400 L300 380 L600 420 L900 390 L1200 410 L1200 600 L0 600 Z"/><g fill="%23ffd700"><circle cx="200" cy="150" r="40"/><circle cx="400" cy="120" r="30"/><circle cx="600" cy="140" r="35"/><circle cx="800" cy="110" r="25"/><circle cx="1000" cy="160" r="45"/></g></svg>');
+            background: linear-gradient(rgba(26, 26, 26, 0.7), rgba(45, 45, 45, 0.7)), 
+                        url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 600"><defs><linearGradient id="sky" x1="0%" y1="0%" x2="0%" y2="100%"><stop offset="0%" style="stop-color:%23444444;stop-opacity:1" /><stop offset="100%" style="stop-color:%23666666;stop-opacity:1" /></linearGradient></defs><rect fill="url(%23sky)" width="1200" height="600"/><path fill="%235a4a3a" d="M0 450 L200 420 L400 440 L600 430 L800 450 L1000 440 L1200 460 L1200 600 L0 600 Z"/><path fill="%236b5a4a" d="M0 500 L300 480 L600 490 L900 485 L1200 495 L1200 600 L0 600 Z"/></svg>');
             background-size: cover;
             background-position: center;
             height: 100vh;
@@ -75,6 +82,23 @@
             text-align: center;
             color: white;
             margin-top: 80px;
+            position: relative;
+        }
+
+        .hero::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: radial-gradient(ellipse at center, transparent 0%, rgba(0,0,0,0.3) 100%);
+            pointer-events: none;
+        }
+
+        .hero-content {
+            position: relative;
+            z-index: 2;
         }
 
         .hero-content h1 {
@@ -98,29 +122,34 @@
 
         .btn {
             padding: 15px 30px;
-            background: #228b22;
+            background: linear-gradient(135deg, #8b6f47 0%, #a0845c 100%);
             color: white;
             text-decoration: none;
             border-radius: 8px;
             font-weight: bold;
             transition: all 0.3s ease;
             display: inline-block;
+            box-shadow: 0 4px 15px rgba(139, 111, 71, 0.3);
+            border: 2px solid transparent;
+            text-transform: uppercase;
+            letter-spacing: 1px;
         }
 
         .btn:hover {
-            background: #32cd32;
+            background: linear-gradient(135deg, #a0845c 0%, #8b6f47 100%);
             transform: translateY(-2px);
-            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+            box-shadow: 0 6px 25px rgba(139, 111, 71, 0.4);
         }
 
         .btn-secondary {
             background: transparent;
-            border: 2px solid white;
+            border: 2px solid #8b6f47;
+            color: #8b6f47;
         }
 
         .btn-secondary:hover {
-            background: white;
-            color: #2c5530;
+            background: #8b6f47;
+            color: white;
         }
 
         .section {
@@ -128,7 +157,7 @@
         }
 
         .section-alt {
-            background: #f8f9fa;
+            background: linear-gradient(135deg, #f8f8f8 0%, #e0e0e0 100%);
         }
 
         .section-header {
@@ -138,13 +167,26 @@
 
         .section-header h2 {
             font-size: 2.5rem;
-            color: #2c5530;
+            color: #2a2a2a;
             margin-bottom: 1rem;
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+            position: relative;
+        }
+
+        .section-header h2::after {
+            content: '';
+            position: absolute;
+            bottom: -10px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 80px;
+            height: 3px;
+            background: linear-gradient(90deg, #8b6f47, #a0845c);
         }
 
         .section-header p {
             font-size: 1.2rem;
-            color: #666;
+            color: #555;
             max-width: 600px;
             margin: 0 auto;
         }
@@ -157,19 +199,33 @@
         }
 
         .card {
-            background: white;
+            background: linear-gradient(135deg, #ffffff 0%, #f5f5f5 100%);
             padding: 2rem;
             border-radius: 12px;
-            box-shadow: 0 5px 20px rgba(0,0,0,0.1);
-            transition: transform 0.3s ease;
+            box-shadow: 0 8px 30px rgba(0,0,0,0.15);
+            transition: all 0.3s ease;
+            border: 1px solid #e0e0e0;
+            position: relative;
+        }
+
+        .card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 4px;
+            background: linear-gradient(90deg, #8b6f47, #a0845c);
+            border-radius: 12px 12px 0 0;
         }
 
         .card:hover {
-            transform: translateY(-5px);
+            transform: translateY(-8px);
+            box-shadow: 0 15px 40px rgba(0,0,0,0.2);
         }
 
         .card h3 {
-            color: #2c5530;
+            color: #2a2a2a;
             margin-bottom: 1rem;
             font-size: 1.5rem;
         }
@@ -187,16 +243,18 @@
         }
 
         .story-image {
-            background: linear-gradient(45deg, #228b22, #90ee90);
+            background: linear-gradient(45deg, #2a2a2a, #4a4a4a);
             height: 400px;
             border-radius: 12px;
             display: flex;
             align-items: center;
             justify-content: center;
-            color: white;
+            color: #f5f5f5;
             font-size: 1.2rem;
             text-align: center;
             padding: 2rem;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+            border: 3px solid #8b6f47;
         }
 
         .crops-grid {
@@ -207,25 +265,29 @@
         }
 
         .crop-card {
-            background: white;
+            background: linear-gradient(135deg, #ffffff 0%, #f8f8f8 100%);
             border-radius: 12px;
             overflow: hidden;
-            box-shadow: 0 5px 20px rgba(0,0,0,0.1);
-            transition: transform 0.3s ease;
+            box-shadow: 0 8px 30px rgba(0,0,0,0.15);
+            transition: all 0.3s ease;
+            border: 2px solid #e0e0e0;
         }
 
         .crop-card:hover {
             transform: scale(1.05);
+            box-shadow: 0 15px 40px rgba(0,0,0,0.2);
+            border-color: #8b6f47;
         }
 
         .crop-icon {
             height: 120px;
-            background: linear-gradient(45deg, #228b22, #90ee90);
+            background: linear-gradient(45deg, #8b6f47, #a0845c);
             display: flex;
             align-items: center;
             justify-content: center;
             font-size: 3rem;
             color: white;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
         }
 
         .crop-info {
@@ -233,28 +295,55 @@
         }
 
         .crop-info h4 {
-            color: #2c5530;
+            color: #2a2a2a;
             margin-bottom: 0.5rem;
         }
 
         .togo-section {
-            background: linear-gradient(135deg, #2c5530, #4a7c59);
+            background: linear-gradient(135deg, #2a2a2a, #3a3a3a);
             color: white;
             text-align: center;
+            position: relative;
+        }
+
+        .togo-section::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: linear-gradient(45deg, transparent 0%, rgba(139, 111, 71, 0.1) 100%);
+            pointer-events: none;
         }
 
         .togo-section .section-header h2,
         .togo-section .section-header p {
             color: white;
+            position: relative;
+            z-index: 2;
         }
 
         .contact-form {
-            background: white;
+            background: linear-gradient(135deg, #ffffff 0%, #f8f8f8 100%);
             padding: 3rem;
             border-radius: 12px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+            box-shadow: 0 15px 50px rgba(0,0,0,0.2);
             max-width: 600px;
             margin: 0 auto;
+            border: 2px solid #e0e0e0;
+            position: relative;
+        }
+
+        .contact-form::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 4px;
+            background: linear-gradient(90deg, #8b6f47, #a0845c);
+            border-radius: 12px 12px 0 0;
         }
 
         .form-group {
@@ -264,8 +353,11 @@
         .form-group label {
             display: block;
             margin-bottom: 0.5rem;
-            color: #2c5530;
+            color: #2a2a2a;
             font-weight: bold;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            font-size: 0.9rem;
         }
 
         .form-group input,
@@ -276,21 +368,24 @@
             border: 2px solid #ddd;
             border-radius: 6px;
             font-size: 1rem;
-            transition: border-color 0.3s ease;
+            transition: all 0.3s ease;
+            background: white;
         }
 
         .form-group input:focus,
         .form-group textarea:focus,
         .form-group select:focus {
             outline: none;
-            border-color: #228b22;
+            border-color: #8b6f47;
+            box-shadow: 0 0 10px rgba(139, 111, 71, 0.2);
         }
 
         footer {
-            background: #2c3e50;
+            background: linear-gradient(135deg, #1a1a1a 0%, #2a2a2a 100%);
             color: white;
             text-align: center;
             padding: 3rem 0;
+            border-top: 3px solid #8b6f47;
         }
 
         .footer-content {
@@ -302,16 +397,19 @@
 
         .footer-section h4 {
             margin-bottom: 1rem;
-            color: #90ee90;
+            color: #8b6f47;
+            text-transform: uppercase;
+            letter-spacing: 2px;
         }
 
         .footer-section a {
-            color: #ecf0f1;
+            color: #d0d0d0;
             text-decoration: none;
+            transition: color 0.3s ease;
         }
 
         .footer-section a:hover {
-            color: #90ee90;
+            color: #8b6f47;
         }
 
         @media (max-width: 768px) {
@@ -584,9 +682,11 @@
         window.addEventListener('scroll', function() {
             const header = document.querySelector('header');
             if (window.scrollY > 100) {
-                header.style.background = 'rgba(44, 85, 48, 0.95)';
+                header.style.background = 'rgba(26, 26, 26, 0.95)';
+                header.style.borderBottom = '3px solid #8b6f47';
             } else {
-                header.style.background = 'linear-gradient(135deg, #2c5530 0%, #4a7c59 100%)';
+                header.style.background = 'linear-gradient(135deg, #1a1a1a 0%, #2d2d2d 100%)';
+                header.style.borderBottom = '3px solid #8b6f47';
             }
         });
     </script>
